--- a/index.html
+++ b/index.html
@@ -399,32 +399,27 @@
 
                 // Date/capacity row: B = "Date"
                 if (colBup === 'DATE' && currentStation) {
-                    // Look 1-2 rows back for product names in C(2), E(4), G(6), I(8), K(10), M(12)
+                    // Look 1-2 rows back for product names in C(2), E(4), G(6), I(8)
                     let nameRow = null;
                     for (let back = 1; back <= 3; back++) {
                         const prev = lines[i - back];
                         if (!prev) continue;
                         const hasProductName = [2, 4, 6, 8, 10, 12].some(c => {
                             const v = (prev[c] || '').trim();
-                            // Must be short (< 25 chars) and match fuel terms
-                            return v && v.length < 25 && /^(reg|diesel|super|premium|supreme|furnace|stove|dyed)/i.test(v);
+                            return v && /reg|diesel|super|premium|supreme|furnace|stove|dyed/i.test(v);
                         });
                         if (hasProductName) { nameRow = prev; break; }
                     }
 
                     productCols = [];
-                    // Products can be in columns C(2), E(4), G(6), I(8), K(10), M(12)
+                    // Products are in columns C(2), E(4), G(6), I(8), K(10), M(12)
                     // Capacities are in the same columns on the Date row
                     // Ullage columns are D(3), F(5), H(7), J(9), L(11), N(13)
                     for (const col of [2, 4, 6, 8, 10, 12]) {
                         const pName = nameRow ? (nameRow[col] || '').trim() : '';
                         const capRaw = (row[col] || '').trim();
                         const cap = parseNum(capRaw);
-                        // Strict validation: must be short, start with fuel term, and have valid capacity
-                        const isValidProduct = pName && pName.length < 25 && 
-                            /^(reg|diesel|super|premium|supreme|furnace|stove|dyed)/i.test(pName) &&
-                            cap > 100;  // Capacity must be at least 100L to be real
-                        if (isValidProduct) {
+                        if (pName && cap > 0) {
                             productCols.push({ name: pName, capacity: cap, colVol: col, colUll: col + 1 });
                             currentStation.products.push({ name: pName, capacity: cap });
                         }
@@ -559,7 +554,7 @@
 
                 // Detect "Date" row (capacity row)
                 if (colB === 'Date' && currentStation) {
-                    // Look at the row ABOVE for product names (cols C=2, E=4, G=6, I=8, K=10, M=12)
+                    // Look at the row ABOVE for product names (cols C=2, E=4, G=6, I=8)
                     // And sometimes 2 rows above
                     let nameRow = null;
                     for (let back = 1; back <= 2; back++) {
@@ -569,8 +564,7 @@
                         let hasNames = false;
                         for (const col of [2, 4, 6, 8, 10, 12]) {
                             const v = getStr(prevCells, col);
-                            // Must be short (< 25 chars) and start with fuel terms
-                            if (v && v.length < 25 && /^(reg|diesel|super|premium|supreme|furnace|stove|dyed)/i.test(v)) {
+                            if (v && v.match(/reg|diesel|super|premium|supreme|furnace|stove|dyed/i)) {
                                 hasNames = true;
                                 break;
                             }
@@ -585,17 +579,13 @@
                     for (const col of [2, 4, 6, 8, 10, 12]) {
                         const pName = nameRow ? getStr(nameRow, col) : '';
                         const cap = getNum(cells, col);
-                        // Strict validation: must be short, start with fuel term, and have valid capacity
-                        const isValidProduct = pName && pName.length < 25 && 
-                            /^(reg|diesel|super|premium|supreme|furnace|stove|dyed)/i.test(pName) &&
-                            cap && cap > 100;  // Capacity must be at least 100L to be real
-                        if (isValidProduct) {
+                        if (pName && cap && cap > 0) {
                             const cleanName = pName.trim();
                             productCols.push({
                                 name: cleanName,
                                 capacity: cap,
                                 colVol: col,      // volume in same column as capacity
-                                colUll: col + 1   // ullage in next column (D,F,H,J,L,N)
+                                colUll: col + 1   // ullage in next column (D,F,H,J)
                             });
                             currentStation.products.push({ name: cleanName, capacity: cap });
                         }
